Fix for bug #2247: "mysql_stmt_affected_rows returns affected rows from last command"

include/mysql.h:
  Fix for bug #2247: 
  added affected_rows variable to MYSQL_STMT
libmysql/libmysql.c:
  Fix for bug #2247: 
  save mysql->affected_rows in stmt->affected_rows
  after mysql_execute() and mysql_stmt_store_result().
tests/client_test.c:
  Fix for bug #2247: test added